{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 32,
  "lineage": "09ada8c4-40e0-5f4d-d436-ef3fa0c905ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6fb3149c8971679",
            "association_id": "eipassoc-0c08e0935ce2eb911",
            "domain": "vpc",
            "id": "eipalloc-0f6fb3149c8971679",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01071bbf880221f77",
            "private_dns": "ip-10-12-0-4.ec2.internal",
            "private_ip": "10.12.0.4",
            "public_dns": "ec2-54-145-231-12.compute-1.amazonaws.com",
            "public_ip": "54.145.231.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "test_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:internet-gateway/igw-0a118049accaf22d8",
            "id": "igw-0a118049accaf22d8",
            "owner_id": "467875252379",
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f6fb3149c8971679",
            "association_id": "eipassoc-0c08e0935ce2eb911",
            "connectivity_type": "public",
            "id": "nat-0a7b4013750112bff",
            "network_interface_id": "eni-01071bbf880221f77",
            "private_ip": "10.12.0.4",
            "public_ip": "54.145.231.12",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0643cce50717cfefd"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_subnet_1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:network-acl/acl-008ae135057f78346",
            "egress": [],
            "id": "acl-008ae135057f78346",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "467875252379",
            "subnet_ids": [
              "subnet-00bc08d5a0c0caec6",
              "subnet-0a0531fef465db9b8"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:network-acl/acl-073afb08387de1947",
            "egress": [],
            "id": "acl-073afb08387de1947",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              }
            ],
            "owner_id": "467875252379",
            "subnet_ids": [
              "subnet-0643cce50717cfefd",
              "subnet-07e2a51f38e804442"
            ],
            "tags": {},
            "tags_all": {},
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_nacl_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-04e1e80d7614f6c51",
            "network_acl_id": "acl-008ae135057f78346",
            "subnet_id": "subnet-00bc08d5a0c0caec6"
          },
          "dependencies": [
            "aws_network_acl.private_nacl",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "private_nacl_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-088970350cd795df7",
            "network_acl_id": "acl-008ae135057f78346",
            "subnet_id": "subnet-0a0531fef465db9b8"
          },
          "dependencies": [
            "aws_network_acl.private_nacl",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_nacl_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f27556ea6e4d9579",
            "network_acl_id": "acl-073afb08387de1947",
            "subnet_id": "subnet-0643cce50717cfefd"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "public_nacl_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0f01e377e7a51fb28",
            "network_acl_id": "acl-073afb08387de1947",
            "subnet_id": "subnet-07e2a51f38e804442"
          },
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_nacl_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2254966905",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-008ae135057f78346",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.private_nacl",
            "aws_subnet.private_subnet_1",
            "aws_subnet.private_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_nacl_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3768192480",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-073afb08387de1947",
            "protocol": "6",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_network_acl.public_nacl",
            "aws_subnet.public_subnet_1",
            "aws_subnet.public_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_subnet1_route_to_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07a8785d9902a32821080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a7b4013750112bff",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07a8785d9902a3282",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat_gateway",
            "aws_route_table.private_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_route_to_internet_gateway_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a118049accaf22d8",
            "id": "r-rtb-0f99132b31fad88961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f99132b31fad8896",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_route_to_internet_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a118049accaf22d8",
            "id": "r-rtb-0f99132b31fad88961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f99132b31fad8896",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.test_igw",
            "aws_route_table.public_route_table",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:route-table/rtb-07a8785d9902a3282",
            "id": "rtb-07a8785d9902a3282",
            "owner_id": "467875252379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a7b4013750112bff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:route-table/rtb-0f99132b31fad8896",
            "id": "rtb-0f99132b31fad8896",
            "owner_id": "467875252379",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a118049accaf22d8",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03f63383965ba264a",
            "route_table_id": "rtb-07a8785d9902a3282",
            "subnet_id": "subnet-00bc08d5a0c0caec6"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07913b61de8af932b",
            "route_table_id": "rtb-07a8785d9902a3282",
            "subnet_id": "subnet-0a0531fef465db9b8"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03be3d472ce6e388b",
            "route_table_id": "rtb-0f99132b31fad8896",
            "subnet_id": "subnet-0643cce50717cfefd"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_1",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05cf22a848cd923be",
            "route_table_id": "rtb-0f99132b31fad8896",
            "subnet_id": "subnet-07e2a51f38e804442"
          },
          "dependencies": [
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet_2",
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:subnet/subnet-00bc08d5a0c0caec6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.12.0.32/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00bc08d5a0c0caec6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467875252379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:subnet/subnet-0a0531fef465db9b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.12.0.48/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0531fef465db9b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467875252379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:subnet/subnet-0643cce50717cfefd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.12.0.0/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0643cce50717cfefd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467875252379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:subnet/subnet-07e2a51f38e804442",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.12.0.16/28",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e2a51f38e804442",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467875252379",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0289ae505afe71b88"
          },
          "dependencies": [
            "aws_vpc.test_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:467875252379:vpc/vpc-0289ae505afe71b88",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.12.0.0/26",
            "default_network_acl_id": "acl-047da83e44fe7e542",
            "default_route_table_id": "rtb-0a3bc1149ff48a073",
            "default_security_group_id": "sg-0152f4731b87db17f",
            "dhcp_options_id": "dopt-0cad5133168f35bb7",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0289ae505afe71b88",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3bc1149ff48a073",
            "owner_id": "467875252379"
          }
        }
      ]
    }
  ]
}